@@ -1,5 +1,10 @@
 2006-12-12  Akim Demaille  <demaille@gostai.com>
 
+	Simplify the logic of UCommand_LOAD::execute
+	* src/ucommand.cc: here.
+
+2006-12-12  Akim Demaille  <demaille@gostai.com>
+
 	UParser::*_type
 	* src/parser/uparser.hh (token_type, semantic_type)
 	(location_type): New.
